pion/antlr/IonTextParser.py
# Generated from IonText.g4 by ANTLR 4.7
# encoding: utf-8
from antlr4 import (
    ParseTreeListener, Parser, ATNDeserializer, DFA, PredictionContextCache,
    Token, TokenStream, ParserATNSimulator, ParserRuleContext, ATN,
    RecognitionException, NoViableAltException)
from io import StringIO
from typing.io import TextIO
import sys




class IonTextParser(Parser):

    grammarFileName = "IonText.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [DFA(ds, i) for i, ds in enumerate(atn.decisionToState)]

    sharedContextCache = PredictionContextCache()

    literalNames = [
        "<INVALID>", "'['", "']'", "'('", "')'", "'{'", "'}'", "','", "':'",
        "'.'", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", "'null'"]

    symbolicNames = [
        "<INVALID>", "L_BRACKET", "R_BRACKET", "L_PAREN", "R_PAREN", "L_CURLY",
        "R_CURLY", "COMMA", "COLON", "DOT", "NON_DOT_OPERATOR", "WHITESPACE",
        "INLINE_COMMENT", "BLOCK_COMMENT", "NULL", "TYPE", "BOOL", "TIMESTAMP",
        "BIN_INTEGER", "DEC_INTEGER", "HEX_INTEGER", "SPECIAL_FLOAT", "FLOAT",
        "DECIMAL", "QUOTED_SYMBOL", "IDENTIFIER_SYMBOL", "SHORT_QUOTED_STRING",
        "LONG_QUOTED_STRING", "SHORT_QUOTED_CLOB", "LONG_QUOTED_CLOB", "BLOB"]

    RULE_top_level = 0
    RULE_top_level_value = 1
    RULE_value = 2
    RULE_entity = 3
    RULE_delimiting_entity = 4
    RULE_keyword_delimiting_entity = 5
    RULE_keyword_entity = 6
    RULE_numeric_entity = 7
    RULE_annotation = 8
    RULE_quoted_annotation = 9
    RULE_list_type = 10
    RULE_sexp = 11
    RULE_sexp_value = 12
    RULE_sexp_delimiting_entity = 13
    RULE_sexp_keyword_delimiting_entity = 14
    RULE_sexp_null_delimiting_entity = 15
    RULE_sexp_keyword_entity = 16
    RULE_operator = 17
    RULE_struct = 18
    RULE_field = 19
    RULE_any_null = 20
    RULE_typed_null = 21
    RULE_field_name = 22
    RULE_quoted_text = 23
    RULE_symbol = 24
    RULE_ws = 25

    ruleNames = [
        "top_level", "top_level_value", "value", "entity", "delimiting_entity",
        "keyword_delimiting_entity", "keyword_entity", "numeric_entity",
        "annotation", "quoted_annotation", "list_type", "sexp", "sexp_value",
        "sexp_delimiting_entity", "sexp_keyword_delimiting_entity",
        "sexp_null_delimiting_entity", "sexp_keyword_entity", "operator",
        "struct", "field", "any_null", "typed_null", "field_name",
        "quoted_text", "symbol", "ws"]

    EOF = Token.EOF
    L_BRACKET = 1
    R_BRACKET = 2
    L_PAREN = 3
    R_PAREN = 4
    L_CURLY = 5
    R_CURLY = 6
    COMMA = 7
    COLON = 8
    DOT = 9
    NON_DOT_OPERATOR = 10
    WHITESPACE = 11
    INLINE_COMMENT = 12
    BLOCK_COMMENT = 13
    NULL = 14
    TYPE = 15
    BOOL = 16
    TIMESTAMP = 17
    BIN_INTEGER = 18
    DEC_INTEGER = 19
    HEX_INTEGER = 20
    SPECIAL_FLOAT = 21
    FLOAT = 22
    DECIMAL = 23
    QUOTED_SYMBOL = 24
    IDENTIFIER_SYMBOL = 25
    SHORT_QUOTED_STRING = 26
    LONG_QUOTED_STRING = 27
    SHORT_QUOTED_CLOB = 28
    LONG_QUOTED_CLOB = 29
    BLOB = 30

    def __init__(self, input: TokenStream, output: TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7")
        self._interp = ParserATNSimulator(
            self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None

    class Top_levelContext(ParserRuleContext):

        def __init__(
                self, parser, parent: ParserRuleContext=None,
                invokingState: int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(IonTextParser.EOF, 0)

        def top_level_value(self, i: int=None):
            if i is None:
                return self.getTypedRuleContexts(
                    IonTextParser.Top_level_valueContext)
            else:
                return self.getTypedRuleContext(
                    IonTextParser.Top_level_valueContext, i)

        def ws(self, i: int=None):
            if i is None:
                return self.getTypedRuleContexts(IonTextParser.WsContext)
            else:
                return self.getTypedRuleContext(IonTextParser.WsContext, i)

        def value(self):
            return self.getTypedRuleContext(IonTextParser.ValueContext, 0)

        def getRuleIndex(self):
            return IonTextParser.RULE_top_level

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterTop_level"):
                listener.enterTop_level(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitTop_level"):
                listener.exitTop_level(self)

    def top_level(self):

        localctx = IonTextParser.Top_levelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_top_level)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input, 1, self._ctx)
            while _alt != 2 and _alt != ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 55
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(
                        self._input, 0, self._ctx)
                    while _alt != 2 and _alt != ATN.INVALID_ALT_NUMBER:
                        if _alt == 1:
                            self.state = 52
                            self.ws()
                        self.state = 57
                        self._errHandler.sync(self)
                        _alt = self._interp.adaptivePredict(
                            self._input, 0, self._ctx)

                    self.state = 58
                    self.top_level_value()
                self.state = 63
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input, 1, self._ctx)

            self.state = 67
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input, 2, self._ctx)
            while _alt != 2 and _alt != ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 64
                    self.ws()
                self.state = 69
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input, 2, self._ctx)

            self.state = 71
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (
                    ((_la) & ~0x3f) == 0 and (
                        (1 << _la) & (
                            (1 << IonTextParser.L_BRACKET) |
                            (1 << IonTextParser.L_PAREN) |
                            (1 << IonTextParser.L_CURLY) |
                            (1 << IonTextParser.WHITESPACE) |
                            (1 << IonTextParser.INLINE_COMMENT) |
                            (1 << IonTextParser.BLOCK_COMMENT) |
                            (1 << IonTextParser.NULL) |
                            (1 << IonTextParser.TYPE) |
                            (1 << IonTextParser.BOOL) |
                            (1 << IonTextParser.TIMESTAMP) |
                            (1 << IonTextParser.BIN_INTEGER) |
                            (1 << IonTextParser.DEC_INTEGER) |
                            (1 << IonTextParser.HEX_INTEGER) |
                            (1 << IonTextParser.SPECIAL_FLOAT) |
                            (1 << IonTextParser.FLOAT) |
                            (1 << IonTextParser.DECIMAL) |
                            (1 << IonTextParser.QUOTED_SYMBOL) |
                            (1 << IonTextParser.IDENTIFIER_SYMBOL) |
                            (1 << IonTextParser.SHORT_QUOTED_STRING) |
                            (1 << IonTextParser.LONG_QUOTED_STRING) |
                            (1 << IonTextParser.SHORT_QUOTED_CLOB) |
                            (1 << IonTextParser.LONG_QUOTED_CLOB) |
                            (1 << IonTextParser.BLOB))) != 0):
                self.state = 70
                self.value()

            self.state = 73
            self.match(IonTextParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Top_level_valueContext(ParserRuleContext):

        def __init__(
                self, parser, parent: ParserRuleContext=None,
                invokingState: int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def top_level_value(self):
            return self.getTypedRuleContext(
                IonTextParser.Top_level_valueContext, 0)

        def annotation(self, i: int=None):
            if i is None:
                return self.getTypedRuleContexts(
                    IonTextParser.AnnotationContext)
            else:
                return self.getTypedRuleContext(
                    IonTextParser.AnnotationContext, i)

        def delimiting_entity(self):
            return self.getTypedRuleContext(
                IonTextParser.Delimiting_entityContext, 0)

        def numeric_entity(self):
            return self.getTypedRuleContext(
                IonTextParser.Numeric_entityContext, 0)

        def ws(self):
            return self.getTypedRuleContext(IonTextParser.WsContext, 0)

        def quoted_annotation(self):
            return self.getTypedRuleContext(
                IonTextParser.Quoted_annotationContext, 0)

        def value(self):
            return self.getTypedRuleContext(IonTextParser.ValueContext, 0)

        def keyword_entity(self):
            return self.getTypedRuleContext(
                IonTextParser.Keyword_entityContext, 0)

        def keyword_delimiting_entity(self):
            return self.getTypedRuleContext(
                IonTextParser.Keyword_delimiting_entityContext, 0)

        def getRuleIndex(self):
            return IonTextParser.RULE_top_level_value

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterTop_level_value"):
                listener.enterTop_level_value(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitTop_level_value"):
                listener.exitTop_level_value(self)

    def top_level_value(self):

        localctx = IonTextParser.Top_level_valueContext(
            self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_top_level_value)
        try:
            self.state = 103
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 5, self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 76
                self._errHandler.sync(self)
                _alt = 1
                while _alt != 2 and _alt != ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 75
                        self.annotation()

                    else:
                        raise NoViableAltException(self)
                    self.state = 78
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(
                        self._input, 4, self._ctx)

                self.state = 80
                self.top_level_value()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 82
                self.delimiting_entity()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 83
                self.numeric_entity()
                self.state = 84
                self.ws()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 86
                self.numeric_entity()
                self.state = 87
                self.quoted_annotation()
                self.state = 88
                self.value()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 90
                self.numeric_entity()
                self.state = 91
                self.delimiting_entity()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 93
                self.keyword_entity()
                self.state = 94
                self.ws()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 96
                self.keyword_entity()
                self.state = 97
                self.quoted_annotation()
                self.state = 98
                self.value()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 100
                self.keyword_entity()
                self.state = 101
                self.keyword_delimiting_entity()
                pass

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ValueContext(ParserRuleContext):

        def __init__(
                self, parser, parent: ParserRuleContext=None,
                invokingState: int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def entity(self):
            return self.getTypedRuleContext(IonTextParser.EntityContext, 0)

        def annotation(self, i: int=None):
            if i is None:
                return self.getTypedRuleContexts(
                    IonTextParser.AnnotationContext)
            else:
                return self.getTypedRuleContext(
                    IonTextParser.AnnotationContext, i)

        def getRuleIndex(self):
            return IonTextParser.RULE_value

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterValue"):
                listener.enterValue(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitValue"):
                listener.exitValue(self)

    def value(self):

        localctx = IonTextParser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_value)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input, 6, self._ctx)
            while _alt != 2 and _alt != ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 105
                    self.annotation()
                self.state = 110
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input, 6, self._ctx)

            self.state = 111
            self.entity()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class EntityContext(ParserRuleContext):

        def __init__(
                self, parser, parent: ParserRuleContext=None,
                invokingState: int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def numeric_entity(self):
            return self.getTypedRuleContext(
                IonTextParser.Numeric_entityContext, 0)

        def delimiting_entity(self):
            return self.getTypedRuleContext(
                IonTextParser.Delimiting_entityContext, 0)

        def keyword_entity(self):
            return self.getTypedRuleContext(
                IonTextParser.Keyword_entityContext, 0)

        def getRuleIndex(self):
            return IonTextParser.RULE_entity

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterEntity"):
                listener.enterEntity(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitEntity"):
                listener.exitEntity(self)

    def entity(self):

        localctx = IonTextParser.EntityContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_entity)
        try:
            self.state = 116
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [
                    IonTextParser.TIMESTAMP, IonTextParser.BIN_INTEGER,
                    IonTextParser.DEC_INTEGER, IonTextParser.HEX_INTEGER,
                    IonTextParser.FLOAT, IonTextParser.DECIMAL]:
                self.enterOuterAlt(localctx, 1)
                self.state = 113
                self.numeric_entity()
                pass
            elif token in [
                    IonTextParser.L_BRACKET, IonTextParser.L_PAREN,
                    IonTextParser.L_CURLY, IonTextParser.WHITESPACE,
                    IonTextParser.INLINE_COMMENT, IonTextParser.BLOCK_COMMENT,
                    IonTextParser.QUOTED_SYMBOL,
                    IonTextParser.SHORT_QUOTED_STRING,
                    IonTextParser.LONG_QUOTED_STRING,
                    IonTextParser.SHORT_QUOTED_CLOB,
                    IonTextParser.LONG_QUOTED_CLOB, IonTextParser.BLOB]:
                self.enterOuterAlt(localctx, 2)
                self.state = 114
                self.delimiting_entity()
                pass
            elif token in [
                    IonTextParser.NULL, IonTextParser.TYPE, IonTextParser.BOOL,
                    IonTextParser.SPECIAL_FLOAT,
                    IonTextParser.IDENTIFIER_SYMBOL]:
                self.enterOuterAlt(localctx, 3)
                self.state = 115
                self.keyword_entity()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Delimiting_entityContext(ParserRuleContext):

        def __init__(
                self, parser, parent: ParserRuleContext=None,
                invokingState: int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def quoted_text(self):
            return self.getTypedRuleContext(
                IonTextParser.Quoted_textContext, 0)

        def SHORT_QUOTED_CLOB(self):
            return self.getToken(IonTextParser.SHORT_QUOTED_CLOB, 0)

        def LONG_QUOTED_CLOB(self):
            return self.getToken(IonTextParser.LONG_QUOTED_CLOB, 0)

        def BLOB(self):
            return self.getToken(IonTextParser.BLOB, 0)

        def list_type(self):
            return self.getTypedRuleContext(IonTextParser.List_typeContext, 0)

        def sexp(self):
            return self.getTypedRuleContext(IonTextParser.SexpContext, 0)

        def struct(self):
            return self.getTypedRuleContext(IonTextParser.StructContext, 0)

        def getRuleIndex(self):
            return IonTextParser.RULE_delimiting_entity

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterDelimiting_entity"):
                listener.enterDelimiting_entity(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitDelimiting_entity"):
                listener.exitDelimiting_entity(self)
